<resources>
	<string name="app_name">
		KoobStore
	</string>
	<string name="login">
		Login
	</string>
	<string name="register">
		Register
	</string>
	<string name="app_description">
		KoobStore is a simple Android app that allows you to purchase books.
	</string>
	<string name="input_hint_username">
		Username
	</string>
	<string name="input_hint_password">
		Password
	</string>
	<string name="browse">
		Browse
	</string>
	<string name="cart">
		Cart
	</string>
	<string name="orders">
		Orders
	</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="book_cover">Book Cover</string>
	<string name="search_hint">Search</string>
	<string name="title_activity_homepage">HomepageActivity</string>
	<string name="title_home">Home</string>
	<string name="title_dashboard">Dashboard</string>
	<string name="title_notifications">Notifications</string>
	<string name="detailed_image">Detailed Image</string>
	<string name="add_to_cart">Add to Cart</string>
	<string name="view_details">View Details</string>
	<string name="cart_remove">-</string>
	<string name="cart_add">+</string>
	<string name="checkout">Checkout</string>
	<string name="select_category">Select Category...</string>
</resources>