<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<TextView
		android:id="@+id/textViewTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/app_name"
		android:textColor="@color/black"
		android:textSize="60sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.3" />


	<TextView
		android:id="@+id/textViewDescription"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		android:layout_marginLeft="36dp"
		android:layout_marginRight="36dp"
		android:gravity="center"
		android:text="@string/app_description"
		android:textColor="#0D47A1"
		android:textSize="24sp"
		app:layout_constraintTop_toBottomOf="@id/textViewTitle"
		tools:ignore="MissingConstraints" />

	<Button
		android:id="@+id/login_button"
		style="@style/Widget.Material3.Button.ElevatedButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/login"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.3"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.7" />

	<Button
		android:id="@+id/register_button"
		style="@style/Widget.Material3.Button.ElevatedButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/register"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.7"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.7" />


</androidx.constraintlayout.widget.ConstraintLayout>