<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	app:cardCornerRadius="5dp"
	app:cardElevation="5dp"
	style="?attr/materialCardViewElevatedStyle"
	android:layout_marginLeft="8dp"
	android:layout_marginRight="8dp"
	android:layout_marginTop="8dp"
	android:layout_marginBottom="8dp"
	android:clickable="true">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="128dp"
		android:orientation="horizontal">

		<ImageView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:id="@+id/cart_book_cover"
			android:scaleType="centerCrop"
			android:contentDescription="@string/book_cover" />

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="3"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:textSize="20sp"
				android:gravity="center"
				android:textColor="@color/black"
				android:id="@+id/cart_book_title"
				tools:ignore="NestedWeights" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<Button
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					style="@style/Widget.Material3.Button.ElevatedButton"
					android:layout_weight="1"
					android:id="@+id/cart_book_remove"
					android:text="@string/cart_remove" />

				<TextView
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="center"
					android:id="@+id/cart_book_count"/>

				<Button
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					style="@style/Widget.Material3.Button.ElevatedButton"
					android:layout_weight="1"
					android:id="@+id/cart_book_add"
					android:text="@string/cart_add" />

			</LinearLayout>

		</LinearLayout>


	</LinearLayout>

</com.google.android.material.card.MaterialCardView>