<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".modules.welcome.WelcomeLoginFragment">

	<TextView
		android:id="@+id/textViewTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/login"
		android:textColor="@color/black"
		android:textSize="60sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.3" />

	<com.google.android.material.textfield.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/outlinedTextFieldUsername"
		android:hint="@string/input_hint_username"
		android:layout_marginLeft="40dp"
		android:layout_marginRight="40dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.5"
		app:startIconDrawable="@drawable/ic_outline_account_circle_24"
		>

		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"

			android:singleLine="true"
			android:inputType="textNoSuggestions"
			/>

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/outlinedTextFieldPassword"
		android:hint="@string/input_hint_password"
		android:layout_marginTop="24dp"
		android:layout_marginLeft="40dp"
		android:layout_marginRight="40dp"
		app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldUsername"
		app:startIconDrawable="@drawable/ic_baseline_password_24"
		>

		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"

			android:singleLine="true"
			android:inputType="textPassword"
			/>

	</com.google.android.material.textfield.TextInputLayout>

	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/buttonLogin"
		android:layout_marginTop="48dp"
		android:layout_marginLeft="80dp"
		android:layout_marginRight="80dp"
		android:text="@string/login"
		android:textColor="@color/white"
		app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldPassword"
		/>

</androidx.constraintlayout.widget.ConstraintLayout>